--- a/public/css/simple-sidebar.css
+++ b/public/css/simple-sidebar.css
@@ -79,6 +79,11 @@ body {
   background: rgba(255, 255, 255, 0.2);
 }
 
+.sidebar-nav li .active{
+  color: #fff;
+  background: rgba(255, 255, 255, 0.2);
+}
+
 .sidebar-nav li a:active, .sidebar-nav li a:focus {
   text-decoration: none;
 }
